--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ p, .paragraph {
   font-family: "Roboto", sans-serif;
 }
 
-p-lg, .paragraph-lg {
-  font-size: 21px;
+p-lg, .paragraph-sm {
+  font-size: 14px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -78,6 +78,10 @@ h6, .h6 {
   font-size: 14px;
 }
 
+.text-dark-custom{
+  color: #151515;
+}
+
 /* Button style */
 .btn {
   font-size: 22px;
@@ -112,31 +116,33 @@ h6, .h6 {
 }
 
 .btn-primary {
-  background: #41228e;
+  /*#41228e*/
+  background: #61aa53;
   color: #fff;
 }
 
 .btn-primary:active {
-  background: #542cb7 !important;
+  background: #4a7d40 !important;
 }
 
 .btn-primary:hover {
-  background: #542cb7;
+  /*#542cb7*/
+  background: #a5d29c;
 }
 
 .btn-primary.focus, .btn-primary.active {
-  background: #542cb7 !important;
+  background: #4a7d40 !important;
   box-shadow: none !important;
 }
 
 .btn-transparent {
   background: transparent;
-  color: #41228e;
+  color: #bfe8b7;
   font-weight: bold;
 }
 
 .btn-transparent:active, .btn-transparent:hover {
-  color: #41228e;
+  color: #bfe8b7;
 }
 
 body {
@@ -145,12 +151,12 @@ body {
 }
 
 ::-moz-selection {
-  background: #542cb7;
+  background: #4a7d40;
   color: #fff;
 }
 
 ::selection {
-  background: #542cb7;
+  background: #4a7d40;
   color: #fff;
 }
 
@@ -199,11 +205,11 @@ select:focus {
 }
 
 a.text-dark:hover {
-  color: #41228e !important;
+  color: #a5d29c !important;
 }
 
 a:hover {
-  color: #41228e;
+  color: #a5d29c;
 }
 
 .slick-slide {
@@ -211,8 +217,8 @@ a:hover {
 }
 
 .section {
-  padding-top: 70px;
-  padding-bottom: 70px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .section-title {
@@ -251,7 +257,7 @@ a:hover {
 }
 
 .bg-primary {
-  background: #41228e !important;
+  background: #a5d29c !important;
 }
 
 .bg-gray {
@@ -259,7 +265,7 @@ a:hover {
 }
 
 .text-primary {
-  color: #41228e !important;
+  color: #a5d29c !important;
 }
 
 .text-color {
@@ -267,7 +273,7 @@ a:hover {
 }
 
 .text-dark {
-  color: #000 !important;
+  color: #6c757d !important;
 }
 
 .text-light {
@@ -339,7 +345,7 @@ a:hover {
 }
 
 .bg-dark {
-  background-color: #222222 !important;
+  background-color: #1e2f1bc8 !important;
 }
 
 /* icon */
@@ -396,7 +402,7 @@ a:hover {
 }
 
 .form-control:focus {
-  border-color: #41228e;
+  border-color: #a5d29c;
   outline: 0;
   box-shadow: none !important;
 }
@@ -426,20 +432,20 @@ textarea.form-control {
 }
 
 .navigation.nav-bg {
-  background-color: #41228e;
-  padding: 15px 100px;
+  background-color: #a5d29c;
+  padding: 4px 100px;
 }
 
 @media (max-width: 991px) {
   .navigation.nav-bg {
-    padding: 15px 20px;
+    padding: 4px 20px;
   }
 }
 
 @media (max-width: 991px) {
   .navigation {
-    padding: 20px;
-    background: #41228e;
+    padding: 4px;
+    background: #a5d29c;
   }
 }
 
@@ -606,7 +612,7 @@ textarea.form-control {
 }
 
 .hover-bg-primary:hover {
-  background: #41228e;
+  background: #bfe8b7;
 }
 
 .hover-bg-primary:hover * {
@@ -615,7 +621,7 @@ textarea.form-control {
 
 .active-bg-primary {
   transition: .3s ease;
-  background: #41228e;
+  background: #a5d29c;
 }
 
 .active-bg-primary * {
@@ -678,7 +684,7 @@ textarea.form-control {
 /* /portfolio */
 /* testimonial */
 .testimonial-content strong {
-  color: #2bfdff;
+  color: #32562b;
   font-weight: normal;
 }
 
@@ -728,7 +734,8 @@ textarea.form-control {
 /* /testimonial */
 /* footer */
 .footer-section {
-  padding-top: 4px;
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 .shadow-down {
@@ -762,7 +769,7 @@ blockquote {
   display: inline-block;
   padding: 10px 20px;
   background: #eaeaea;
-  border-left: 2px solid #41228e;
+  border-left: 2px solid #a5d29c;
   font-style: italic;
   font-size: 22px;
 }
